# DeviceManager_ADS_Samples

./: .gitignore  BDM_ConfigurationArea.h  BDM_DeviceArea.h  BDM_GeneralArea.h  CMakeLists.txt  DevMan_Generic.cpp  DevMan_TC1000.cpp  Mdp.h  README.md  TC1000_AdsClient.h
ADS/: AdsException.h  BasicADS.h  GenericAdsClient.h  TC1000_AdsClient.h  ads_error.h  ads_exception.h
Areas/: BDM_ConfigurationArea.cpp  BDM_ConfigurationArea.h  BDM_DeviceArea.cpp  BDM_DeviceArea.h  BDM_GeneralArea.cpp  BDM_GeneralArea.h  CMakeLists.txt  cpu.cpp  cpu.h  disk_mgmt.cpp  disk_mgmt.h  file_system_object.cpp  file_system_object.h  mainboard.cpp  mainboard.h  mass_storage_monitoring.cpp  mass_storage_monitoring.h  miscellaneous.cpp  miscellaneous.h  nic.cpp  nic.h  twincat.cpp  twincat.h
Examples/: CMakeLists.txt  change_amsnetid.cpp  change_ip.cpp  copy_file.cpp  delete_file.cpp  delete_route.cpp  dir.cpp  disk_info.cpp  get_cpu_info.cpp  get_device_name.cpp  get_mainboard_info.cpp  get_mass_storage_info.cpp  get_serial_number.cpp  get_tc_version.cpp  mkdir.cpp  read_file.cpp  read_file_progress_bar.cpp  reboot.cpp  write_file.cpp  write_file_progress_bar.cpp
PyModule/: pyproject.toml
TC1000_Examples/: CMakeLists.txt  change_ip.cpp  copy_file.cpp  cpu.cpp  delete_file.cpp  delete_route.cpp  dir.cpp  get_device_name.cpp  get_serial_number.cpp  mkdir.cpp  read_file.cpp  reboot.cpp  write_file.cpp
