cmake_minimum_required (VERSION 3.14)
set(CMAKE_VERBOSE_MAKEFILE ON)

if (WIN32)
    link_libraries(TcAdsDll.lib DeviceManager)
    link_directories(BEFORE "C:\\TwinCAT\\AdsApi\\TcAdsDll\\x64\\lib")

    add_executable(CPU "cpu.cpp")
    add_executable(Reboot "reboot.cpp")
    add_executable(ChangeIP "change_ip.cpp")
    add_executable(DeleteAdsRoute "delete_route.cpp")
    add_executable(DeleteFile "delete_file.cpp")
    add_executable(Dir "dir.cpp")
    add_executable(Mkdir "mkdir.cpp")
    add_executable(ReadFile "read_file.cpp")
    add_executable(WriteFile "write_file.cpp")
    add_executable(CopyFile "copy_file.cpp")
    add_executable(GetDeviceName "get_device_name.cpp")
    add_executable(GetSerialNumber "get_serial_number.cpp")
endif (WIN32)